<resources>
    <string name="app_name">IsotopeC Miner</string>
    <string name="na">n/a</string>

    <string name="battery_temp_max">Battery Temp. Max.</string>
    <string name="battery_temp_max_selected">battery_temp_max_selected</string>
    <string name="remind_me">Battery Temp</string>
    <string name="remind_me_for_bed_time">remind_me_for_bed_time</string>
    <string name="limit_data_usage_selected">limit_data_usage_selected</string>
    <string name="mine_wifi">Only use Wi-Fi for mining</string>
    <string name="avoid_mobile_usage">Avoid mobile data usage</string>
    <string name="battery_level_min">Battery Level</string>
    <string name="battery_level_min_selected">battery_level_min_selected</string>
    <string name="seconds">Battery Level to start Mining</string>
    <string name="mining_pool">Mining Pool</string>
    <string name="cores_for_mining">Cores for Mining</string>
    <string name="tdc_address_selected">tdc_address_selected</string>
    <string name="mining_pool_selected">mining_pool_selected</string>
    <string name="mining_pool_prefs">Select Pool for Mining</string>
    <string name="cpu_cores_prefs">Select number of cores for Mining</string>
    <string name="prefs_second_cpu_thread">prefs_second_cpu_thread</string>
    <string name="enable_second_thread">You can enable 50% of your device available CPU power for mining, to increase hashrate. Default your device will use 25% of available CPU.</string>
    <string name="enable_second_thread_description">CPU Threads</string>
    <string name="prefs_enable_stats">prefs_enable_stats</string>
    <string name="enable_stats">Enable stats for nerds</string>
    <string name="setAddress">Set Address</string>
    <string name="my_hint">Please insert your ISO address</string>
    <string name="cpu_threads_mining" />
    <string name="cpu_threads_selected" />
    <string name="accu_for_mining">accu_for_mining</string>
    <string name="accu_mining_desc">You can use accumulator for mining</string>
    <string name="accu_mining_title">Mine on battery</string>

    <string-array name="pref_battery_temp_max">
        <item>40 °C</item>
        <item>45 °C</item>
        <item>50 °C</item>
    </string-array>

    <string-array name="pref_battery_level">
        <item>50 %</item>
        <item>70 %</item>
        <item>80 %</item>
        <item>90 %</item>
        <item>95 %</item>
    </string-array>

    <string-array name="pref_duration">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="pref_mining_pool">
        <item>209.126.6.239</item>
        <item>isotopec.org</item>
        <item>phlaanxmine.com</item>
        <item>mining4people.com</item>
        <item>191.33.253.162</item>
    </string-array>

    <string-array name="cpu_cores_selectable">
        <item>1 Core</item>
        <item>2 Cores</item>
        <item>3 Cores</item>
        <item>4 Cores</item>
    </string-array>

</resources>
