<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:selectable="false"
    android:enabled="true"
    android:key="example_key"
    android:title="example_title"
    android:summary="anything_you_want"
    android:persistent="true">

    <!--below line is to create preference category-->
    <PreferenceCategory android:title="Additional Settings">

        <!--below option is use to create a list
        preference for Upload preferences-->
        <ListPreference
            android:id="@+id/mining_pool_selected"
            android:defaultValue="0"
            android:dialogTitle="@string/mining_pool"
            android:entries="@array/pref_mining_pool"
            android:entryValues="@array/pref_duration"
            android:key="@string/mining_pool_selected"
            android:summary="@string/mining_pool_prefs"
            android:title="Mining Pool" />

        <!--below switch preference is
            use for mobile data usage-->
        <SwitchPreference
            android:id="@+id/limit_data_usage_selected"
            android:defaultValue="false"
            android:key="@string/limit_data_usage_selected"
            android:summary="@string/mine_wifi"
            android:title="@string/avoid_mobile_usage" />

        <!--below switch preferences is use to restrict mode-->
        <SwitchPreference
            android:id="@+id/second_thread_selected"
            android:defaultValue="false"
            android:key="@string/prefs_second_cpu_thread"
            android:summary="@string/enable_second_thread"
            android:title="@string/enable_second_thread_description" />

        <SwitchPreference
            android:id="@+id/accu_for_mining"
            android:defaultValue="false"
            android:key="@string/accu_for_mining"
            android:summary="@string/accu_mining_desc"
            android:title="@string/accu_mining_title" />

        <!--below list preference is use for
    double tap to seek option-->
        <ListPreference
            android:id="@+id/battery_level_min_selected"
            android:defaultValue="1"
            android:dialogTitle="@string/battery_level_min"
            android:entries="@array/pref_battery_level"
            android:entryValues="@array/pref_duration"
            android:key="@string/battery_level_min_selected"
            android:summary="@string/seconds"
            android:title="@string/battery_level_min" />

        <!--in below line we are creating a list preference
    and we are adding default selected value in list for 3 rd index-->
        <!--dialog title is to set title for our dialog box
            entries is used to add list of data which we
            are adding from our strings file
            entry values is to add values to our entries.
            key is use to add key to our list preferences
            summary is use to add description to our option
            title is use to add title to our list preferences.-->
        <!--this list preference is for remind me option-->
        <ListPreference
            android:id="@+id/battery_temp_max_selected"
            android:defaultValue="1"
            android:dialogTitle="@string/battery_temp_max"
            android:entries="@array/pref_battery_temp_max"
            android:entryValues="@array/pref_duration"
            android:key="@string/battery_temp_max_selected"
            android:summary="Max Battery Temp"
            android:title="@string/remind_me" />

    </PreferenceCategory>

</PreferenceScreen>